--- a/oncall/templates/oncall-deployment-om.yaml
+++ b/oncall/templates/oncall-deployment-om.yaml
@@ -27,3 +27,10 @@ spec:
           limits:
             memory: "1000Mi"
             cpu: "5000m"
+        volumeMounts:
+          - mountPath: /var/lib/mysql
+            name: mysql-persistent-storage
+      volumes:
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+            claimName: mysql-pv-claim
