--- a/oncall/templates/oncall-web-configmap.yaml
+++ b/oncall/templates/oncall-web-configmap.yaml
@@ -5,18 +5,22 @@ metadata:
   namespace: oncall
 data:
   config.yaml: |
+    CLIENT_ID: "5b5b76e0-99ad-4e1e-b62b-c662d0831d06"
+    AUTHORITY: "https://login.microsoftonline.com/8ebfe367-26a7-4e40-9484-0939035411f0"
+    REDIRECT_URL: "http://localhost/authorize"
+    AUDIENCE: "5b5b76e0-99ad-4e1e-b62b-c662d0831d06"
+    LOGOUT_URL: "https://login.microsoftonline.com/8ebfe367-26a7-4e40-9484-0939035411f0/oauth2/v2.0/logout"
     server:
       host: 0.0.0.0
       port: 8080
     debug: True
-    oncall_host: http://localhost:8080
+    oncall_host: http://localhost
     metrics: dummy
     db:
       conn:
         kwargs:
           scheme: mysql+pymysql
           user: root
-          password: '1234'
           host: mysql.oncall.svc
           port: 3306
           database: oncall
@@ -25,9 +29,6 @@ data:
         str: "%(scheme)s://%(user)s:%(password)s@%(host)s/%(database)s?charset=%(charset)s"
       kwargs:
         pool_recycle: 3600
-    session:
-      encrypt_key: 'abc'
-      sign_key: '123'
     auth:
       debug: False
       module: 'oncall.auth.modules.debug'
@@ -38,7 +39,6 @@ data:
       - type: email_messenger
         application: oncall
         user: 'beckertestoncall@gmail.com'
-        password: 'Baronbcb1!'
         server: 'smtp.gmail.com'
 
       # - type: dummy
@@ -92,11 +92,6 @@ data:
       body: 'You are scheduled for an on-call shift in the future, but have no phone number recorded. Please update your information in Oncall.'
 
     header_color: '#0078d4'
-    CLIENT_ID: "5b5b76e0-99ad-4e1e-b62b-c662d0831d06"
-    CLIENT_SECRET: "F-2tBx7BpA.PJ18L0OJv.FXTE7B_gq97~T"
-    AUTHORITY: "https://login.microsoftonline.com/8ebfe367-26a7-4e40-9484-0939035411f0"
-    REDIRECT_URL: "http://localhost/authorize"
-    AUDIENCE: "5b5b76e0-99ad-4e1e-b62b-c662d0831d06"
-    LOGOUT_URL: "https://login.microsoftonline.com/8ebfe367-26a7-4e40-9484-0939035411f0/oauth2/v2.0/logout"
+    
 
 
