--- a/oncall/templates/bootstrap-pv.yaml
+++ b/oncall/templates/bootstrap-pv.yaml
@@ -1,15 +1,14 @@
 apiVersion: v1 # This pv will be removed when switching to azure
 kind: PersistentVolume
 metadata:
-  name: mysql-pv-volume
+  name: bootstrap-pv
   namespace: oncall
   labels:
     type: local
 spec:
   capacity:
-    storage: 20Gi
+    storage: 10Mi
   accessModes:
     - ReadWriteOnce
-  storageClassName: manual
   hostPath: 
-    path: "/mnt/data"
+    path: "/mnt/bootstrap"
